scroll down align fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,6 +142,7 @@ body {
 	position: absolute;
   bottom: 30px;
   left: 50%;
+  margin-left: -15px;
   font-size: 50px;
   animation: bounce 2s infinite 2s;
   -webkit-animation: bounce 2s infinite 2s;
